# osm

./: .gitignore  .goreleaser.yml  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  README.md.hms  go.mod  go.sum  main.go  rustfmt.toml
.github/actions/cargo/: action.yml
.github/workflows/: check.yml  release.yml
src/: lib.rs  main.rs
