[package]
name = "osm"
version = "2.1.2"
edition = "2021"
description = "A utility for Linux systems that maps a modifier key to another key when pressed alone"
authors = ["Keita Urashima <ursm@ursm.jp>"]

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
evdev = "0.12.1"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
